# CloudWatch-Synthetics-Cross-Account-Deployment

./: .copier-answers.yml  Makefile  README.md  app.py  cdk.context.json  cdk.json  pyproject.toml
canaries/: content_service_live.py  content_service_ready.py  content_service_summary.py  download_service.py  pdfton_service.py  share_service.py  token_service.py
cdk.out/: manifest.json  ses-cloudwatch-synthetics.assets.json  ses-cloudwatch-synthetics.template.json  tree.json
cdk.out/assembly-ses-cloudwatch-synthetics-SES-CloudWatch/: manifest.json  sescloudwatchsyntheticsSESCloudWatchSyntheticsSandboxD3DF174F.assets.json  sescloudwatchsyntheticsSESCloudWatchSyntheticsSandboxD3DF174F.template.json
cdk.out/assembly-ses-cloudwatch-synthetics-SES-Dev/: manifest.json  sescloudwatchsyntheticsSESDevCloudwatchSynthetics7F40E559.assets.json  sescloudwatchsyntheticsSESDevCloudwatchSynthetics7F40E559.template.json
cdk.out/assembly-ses-cloudwatch-synthetics-SES-Qa/: manifest.json  sescloudwatchsyntheticsSESQaCloudwatchSynthetics670B7C8A.assets.json  sescloudwatchsyntheticsSESQaCloudwatchSynthetics670B7C8A.template.json
cdk.out/assembly-ses-cloudwatch-synthetics-SES-Sandbox/: manifest.json  sescloudwatchsyntheticsSESSandboxCloudwatchSyntheticsE3F8D8B6.assets.json  sescloudwatchsyntheticsSESSandboxCloudwatchSyntheticsE3F8D8B6.template.json
cdk.out/assembly-ses-cloudwatch-synthetics-SES-Test/: manifest.json  sescloudwatchsyntheticsSESTestCloudwatchSyntheticsBED7C927.assets.json  sescloudwatchsyntheticsSESTestCloudwatchSyntheticsBED7C927.template.json
cdk.out/assembly-ses-cloudwatch-synthetics-SyntheticsStage/: manifest.json  sescloudwatchsyntheticsSyntheticsStageCloudwatchSyntheticsStage54AF4C68.assets.json  sescloudwatchsyntheticsSyntheticsStageCloudwatchSyntheticsStage54AF4C68.template.json
infra/: pipeline.py  stacks.py  stages.py
infra/src/: handler.py
